<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">功课表</string>
	<string name="widget_name">功课表(一周)</string>
	<string name="widget_name2">功课表(一天)</string>
	<string name="widget_name3">功课表(下一节课)</string>
	<string name="info_text">请输入科目。</string>
	<string name="monday">周一</string>
	<string name="time">time</string>
	<string name="tuesday">周二</string>
	<string name="wednesday">周三</string>
	<string name="thursday">周四</string>
	<string name="friday">周五</string>
	<string name="saturday">周六</string>
	<string name="time_class1">7:45－8:25</string>
	<string name="time_class2">8:35－9:15</string>
	<string name="time_class3">9:25－10:05</string>
	<string name="time_class4">10:20－11:00</string>
	<string name="time_class5">11:10－11:50</string>
	<string name="time_class6">14:20－15:00</string>
	<string name="time_class7">15:10－15:50</string>
	<string name="time_class8">16:00－16:40</string>
	<string name="uptime">上课时间</string>
	<string name="downtime">下课时间</string>
	<string name="class1">第一节</string>
	<string name="class2">第二节</string>
	<string name="class3">第三节</string>
	<string name="class4">第四节</string>
	<string name="class5">第五节</string>
	<string name="class6">第六节</string>
	<string name="class7">第七节</string>
	<string name="class8">第八节</string>
	<string name="save">保存</string>
	<string name="quit">退出</string>
	<string name="noentry">有必要弄两个时钟吗。。。</string>
	<string name="space">        </string>
	<string name="Checker">		测试。\n		. . .Testing. . . \n Internal Data. . . \n Storage Data . . . \nThe quick brown fox jumps over the lazy dog.\n 0123456789876543210123456789876543210\n只有程序媛才懂程序猿。\n客户不会了解你的实现方法。\n社会不会知道你的奋斗历程。\n客户不会看待你的奇葩函数。\n社会不会看重你的奇特经历。</string>
	<string name="app2_name">测试。</string>
	<string name="about">关于</string>
	<string name="setting">设置</string>
	<string name="whatsnew">以下都是不可选的，是后续功能的一部分。下一版更精彩！</string>
	<string name="theme">设置主题</string>
	<string name="widgettheme">桌面小插件颜色</string>
	<string name="night">夜间模式</string>
	<string name="many">多图标试验</string>
	<string name="settime">设置时间</string>
	<string name="set_theme">主题</string>
	<string name="set_widget">字体颜色</string>
	<string name="timesetalert">修改时间后重启应用生效。</string>
	<string name="inclass">上课防响铃</string>
	<string name="thisclass">这一节课</string>
	<string name="nextclass">下一节课</string>
	<string name="off">关</string>
	<string name="on">开</string>
	<string name="recover">恢复死亡的插件</string>
</resources>
	
