<?xml version="1.0" encoding="utf-8"?>
<GridLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/Widget2"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:background="#80ffffff">

	<LinearLayout
		android:layout_height="74dp"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="match_parent"
			android:text="@string/monday"
			android:layout_width="wrap_content"
			android:gravity="center"
			android:textColor="#000000"
			android:id="@+id/weekday"
			android:rotation="-90"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class1"
			android:layout_width="wrap_content"
			android:id="@+id/class91"
			android:gravity="center"
			android:textColor="#000000"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class2"
			android:layout_width="wrap_content"
			android:id="@+id/class92"
			android:gravity="center"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class3"
			android:layout_width="wrap_content"
			android:id="@+id/class93"
			android:gravity="center"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class4"
			android:layout_width="wrap_content"
			android:id="@+id/class94"
			android:gravity="center"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class5"
			android:layout_width="wrap_content"
			android:id="@+id/class95"
			android:gravity="center"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class6"
			android:layout_width="wrap_content"
			android:id="@+id/class96"
			android:gravity="center"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class7"
			android:layout_width="wrap_content"
			android:id="@+id/class97"
			android:gravity="center"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

		<TextView
			android:layout_height="match_parent"
			android:text="@string/class8"
			android:layout_width="wrap_content"
			android:id="@+id/class98"
			android:gravity="center"
			android:textColor="#000000"
			android:layout_marginLeft="10dp"/>

	</LinearLayout>

</GridLayout>

